# url_problem

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
url_shortener/: apps.py  errors.py  models.py  urls.py  views.py
url_shortener/backend/: __init__.py  shortener.py  trace_operation.py
url_shortener/domain/: __init__.py  shortener.py  trace_operation.py
url_shortener/migrations/: 0001_initial.py  0002_traceoperation.py
url_shortener/tests/integration/: test_views.py
url_shortener/tests/unit/backend/: test_trace_operation.py
url_shortener_project/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
