[tool.poetry]
name = "url_shortener"
version = "1"
description = "Creates a readable short URL"
authors = ["Igor Mursa <sken3r@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.8.6"
black = "20.8b1"
Django = "3.2"
flake8 = "3.8.4"
hashids = "1.3.1"
isort = "5.6.4"
pytest = "6.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
